test/libsolidity/syntaxTests/nameAndTypeResolution/library_having_variables.sol
library Lib { uint x; }
// ----
// TypeError: (14-20): Library cannot have non-constant state variables
